--- a/.github/workflows/sql-deploy.yml
+++ b/.github/workflows/sql-deploy.yml
@@ -6,9 +6,9 @@ name: SQL-Deploy
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main ]
+    branches: [ github-action ]
   pull_request:
-    branches: [ main ]
+    branches: [ github-action ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
