--- a/.github/workflows/sql-deploy.yml
+++ b/.github/workflows/sql-deploy.yml
@@ -47,7 +47,7 @@ jobs:
         uses: Azure/sql-action@v1
         with:
           # Name of the Azure SQL Server name, like Fabrikam.database.windows.net.
-          server-name: 
+          server-name: ${{ secrets.AZURE_SQL_SERVER }}
           # The connection string, including authentication information, for the Azure SQL Server database.
           connection-string: ${{ secrets.AZURE_SQL_CONNECTION_STRING }}
           # Path to DACPAC file to deploy
