--- a/.github/workflows/sql-deploy.yml
+++ b/.github/workflows/sql-deploy.yml
@@ -51,7 +51,7 @@ jobs:
           # The connection string, including authentication information, for the Azure SQL Server database.
           connection-string: ${{ secrets.AZURE_SQL_CONNECTION_STRING }}
           # Path to DACPAC file to deploy
-          dacpac-package: .\bin\Release\WideWorldImportersDW.dacpac
+          dacpac-package: .\sql\wwi-dw-ssdt\bin\Release\WideWorldImportersDW.dacpac
           # Path to SQL script file to deploy
           sql-file: # optional
           # In case DACPAC option is selected, additional SqlPackage.exe arguments that will be applied. When SQL query option is selected, additional sqlcmd.exe arguments will be applied.
